--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,14 @@ dependencies:
   freezed: ^2.4.6
   json_serializable: ^6.7.1
   freezed_annotation: ^2.4.1
+  animate_gradient: ^0.0.2+1
+  pinput: ^3.0.1
+  intl: ^0.18.0
+  table_calendar: ^3.0.9
+  icalendar_parser: ^2.0.0
+  pdf: ^3.10.7
+  path_provider: ^2.1.1
+  open_document: ^1.0.7
 
 dev_dependencies:
   flutter_test:
@@ -75,6 +83,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/svgs/
+    - assets/calendar/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
