--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,8 @@ dependencies:
   pdf: ^3.10.7
   path_provider: ^2.1.1
   open_document: ^1.0.7
+  url_launcher: ^6.2.2
+  webview_flutter: ^4.4.3
 
 dev_dependencies:
   flutter_test:
