--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  supabase_flutter: ^1.10.22
+  supabase_flutter: 2.3.4
   flutter_svg: ^2.0.9
   google_fonts: ^6.1.0
   smooth_page_indicator: ^1.1.0
@@ -55,9 +55,11 @@ dependencies:
   icalendar_parser: ^2.0.0
   pdf: ^3.10.7
   path_provider: ^2.1.1
-  open_document: ^1.0.7
   url_launcher: ^6.2.2
   webview_flutter: ^4.4.3
+  open_file: ^3.3.2
+  google_sign_in: ^6.2.1
+  http: ^1.2.0
 
 dev_dependencies:
   flutter_test:
